# DopRIO

./: CMakeLists.txt  README.md  package.xml
apps/: get_gt_from_coloradar.cpp  plot_cov_diag.py  rise_for_serial.cpp
apps/ablation_test/ed0/: rise_odom_woJU.txt  rise_odom_woUP.txt  rise_odom_woWD.txt  rise_odom_woWF.txt
apps/ablation_test/ntu_loop2/: ours.txt  rise_odom_ours.txt  rise_odom_woJU.txt  rise_odom_woUP.txt  rise_odom_woWD.txt  rise_odom_woWF.txt  woJU.txt  woUP.txt  woWD.txt  woWF.txt
apps/ablation_test/od3/: rise_odom_woJU.txt  rise_odom_woUP.txt  rise_odom_woWD.txt  rise_odom_woWF.txt
apps/pic/: demo.py
apps/rise_Kitti_eval/: evaluation.py  inter_tum.py  tumfile2kittifile.py
apps/rise_Kitti_eval/fastlio2/: ntu_loop1_0_pred.txt  ntu_loop2_0_pred.txt  ntu_loop3_0_pred.txt
apps/rise_Kitti_eval/fastlio2/ntu_loop1_0_eval/: ntu_loop1_0_error.txt  ntu_loop1_0_stats.txt
apps/rise_Kitti_eval/fastlio2/ntu_loop2_0_eval/: ntu_loop2_0_error.txt  ntu_loop2_0_stats.txt
apps/rise_Kitti_eval/fastlio2/ntu_loop3_0_eval/: ntu_loop3_0_error.txt  ntu_loop3_0_stats.txt
apps/rise_Kitti_eval/gt/: ntu_loop1_0.txt  ntu_loop2_0.txt  ntu_loop3_0.txt
apps/rise_Kitti_eval/ntu_loop1_0/inter_tum/: ntu_loop_0fastlio2.txt  ntu_loop_0openvins.txt
apps/rise_Kitti_eval/ntu_loop1_0/tum/: gt_odom0.txt  ntu_loop1_fastlio2_0.txt
apps/rise_Kitti_eval/ntu_loop2_0/inter_tum/: gt_inter.txt  ntu_loop2_fastlio2_0_inter.txt
apps/rise_Kitti_eval/ntu_loop3_0/inter_tum/: fastlio2_inter.txt  gt_inter.txt  ntu_loop3_0_openvins.txt
apps/rise_Kitti_eval/ntu_loop3_0/tum/: gt_odom_0.txt  ntu_loop3_fastlio2_0.txt  rise_ntu_loop3_0.txt
apps/rise_Kitti_eval/openvins/: ntu_loop1_0_pred.txt  ntu_loop2_0_pred.txt  ntu_loop3_0_pred.txt
apps/rise_Kitti_eval/openvins/ntu_loop1_0_eval/: ntu_loop1_0_error.txt  (+1 more)
apps/rise_Kitti_eval/rise/: ntu_loop1_0_pred.txt  ntu_loop2_0_pred.txt  ntu_loop3_0_pred.txt
apps/visual_pcd/: ntu_loop2_0.pcd  vispcd.py
apps/visual_traj/ed0/: GroundTruth.txt  Ours.txt
apps/visual_traj/od0/: GroundTruth.txt  Ours.txt
apps/visual_traj/od3/: Ours.txt
cmake/: rise.cmake
config/: coloradar_edgarclassroom0.yaml  coloradar_outdoor0.yaml  coloradar_outdoor3.yaml  coloradar_outdoor6.yaml  coloradar_outdoor6_b.yaml  ntu4dradar1.yaml  ntu4dradar2.yaml
data/edgar_classroom_run0/: cov_diag.txt  ego_vel.txt  radarmap.pcd
data/ntu_loop1/: cov_diag.txt  ego_vel.txt  radarmap.pcd  rise_odom.txt
data/ntu_loop2/: cov_diag.txt  ego_vel.txt  gt_odom.txt  radarmap.pcd
data/ntu_loop3/: cov_diag.txt  ego_vel.txt  radarmap.pcd  rise_odom.txt
data/outdoors_run0/: cov_diag.txt  ego_vel.txt  radarmap.pcd
data/outdoors_run3/: cov_diag.txt  ego_vel.txt  gt_odom.txt  radarmap.pcd
data/outdoors_run6/: cov_diag.txt  ego_vel.txt  gt_odom.txt  radarmap.pcd  rise_odom.txt
include/: eskf_rise.h  estimate_vel.h  fast_pdndt.h  hash_vec.h  math_ops.h  radarpcl_view.h  rise_preprocess.h  rise_state.h  sensor_data.h
launch/: rise_serial.launch
src/: eskf_rise.cpp  estimate_vel.cpp  fast_pdndt.cpp  radarpcl_view.cpp  rise_preprocess.cpp
(+17 files in other folders)
